# Interial-Measurement-Unit-Based-Trajectory-Projection-Application

./: ARCHITECTURE.md  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/imumotiontracer/ui/main/: MainScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  motion-engine.cpp  motion-engine.h
app/src/main/java/com/example/imumotiontracer/: MainActivity.kt  NativeMotionEngine.kt  Navigation.kt  NavigationKeys.kt
app/src/main/java/com/example/imumotiontracer/data/: DataRepository.kt  WifiKNNLocalizer.kt  WifiMeasurement.kt  WifiScanManager.kt  WifiScanRepository.kt
app/src/main/java/com/example/imumotiontracer/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/imumotiontracer/ui/main/: MainScreen.kt  MainScreenViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/imumotiontracer/ui/main/: MainScreenViewModelTest.kt
